alertmanager-email-dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: alertmanager-email
  name: alertmanager-email
  namespace: alerting
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: alertmanager-email
    deploymentconfig: alertmanager-email
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: alertmanager-email
        deploymentconfig: alertmanager-email
    spec:
      containers:
      - image: prom/alertmanager
        imagePullPolicy: Always
        name: alertmanager
        ports:
        - containerPort: 9093
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /alertmanager
          name: alertmanager-volume-1
        - mountPath: /etc/alertmanager/
          name: volume-nulax
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: alertmanager-volume-1
      - configMap:
          defaultMode: 420
          name: alerting-email-config
        name: volume-nulax
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - alertmanager
      from:
        kind: ImageStreamTag
        name: alertmanager:latest
        namespace: alerting
    type: ImageChange
