alertmanager-email-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alertmanager-email
  name: alertmanager-email
  namespace: alerting
spec:
  ports:
  - name: 9093-tcp
    port: 9093
    protocol: TCP
    targetPort: 9093
  selector:
    app: alertmanager-email
    deploymentconfig: alertmanager-email
  sessionAffinity: None
  type: ClusterIP
