webhook-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook
  name: webhook
  namespace: alerting
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webhook
    deploymentconfig: webhook
  sessionAffinity: None
  type: ClusterIP
